<resources>
    <string name="app_name">MedPres</string>

    <string name="login_button">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot your password?</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="create_acc">Create an account!</string>
    <string name="create_ur_acc">Create Your Account</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>

    <string name="email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="reenter_password">Re-Enter Password</string>
    <string name="phone">Phone Number</string>

    <string name="back">Back</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="welcome_back">Welcome back, </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_camera">Camera</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>