<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_sign_background"
    tools:context=".ui.activities.signup.SignupActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/back_icon"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signup_layout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:id="@+id/signup_layout"
        android:layout_marginStart="30dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_white_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="108dp"
            android:fontFamily="@font/roboto"
            android:text="@string/create_ur_acc"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etFullNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="91dp"
            android:layout_marginBottom="22dp"
            app:layout_constraintBottom_toTopOf="@+id/UsernameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSignUp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullName"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:drawableStart="@drawable/person_icon"
                android:drawableTint="@color/grey"
                android:drawablePadding="15dp"
                android:hint="@string/full_name"
                android:inputType="text"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="166dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UsernameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="91dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFullNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:drawableStart="@drawable/person_icon"
                android:drawableTint="@color/grey"
                android:drawablePadding="15dp"
                android:hint="@string/username"
                android:inputType="text"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="166dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="91dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UsernameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:drawableStart="@drawable/email_icon"
                android:drawableTint="@color/grey"
                android:drawablePadding="15dp"
                android:hint="@string/email"
                android:inputType="text"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="166dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEnterPasswordLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="91dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEnterPassword"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:drawableStart="@drawable/lock_icon"
                android:drawableTint="@color/grey"
                android:drawablePadding="15dp"
                android:hint="@string/enter_password"
                android:inputType="text"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="166dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etReEnterPasswordLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="91dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEnterPasswordLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etReEnterPassword"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:drawableStart="@drawable/lock_icon"
                android:drawableTint="@color/grey"
                android:drawablePadding="15dp"
                android:hint="@string/reenter_password"
                android:inputType="text"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="166dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/applyButton"
            android:layout_width="126dp"
            android:layout_height="58dp"
            android:layout_marginStart="143dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="143dp"
            android:background="@drawable/button"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etReEnterPasswordLayout"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>